# Economic-Survey-AdvancedRAG

./: .gitignore  README.md  pyproject.toml  setup.sh
archive/: 06_qa_eval.py  chunk_creation.ipynb  qa_dashboard_data.json  qa_results.json  qa_results_detailed.json  toc_processing.ipynb
archive/processed_chunks/: chapter_10_chunk_1.json  chapter_10_chunk_2.json  chapter_10_chunk_3.json  chapter_10_chunk_4.json  chapter_10_chunk_5.json  chapter_11_chunk_1.json  chapter_11_chunk_2.json  chapter_11_chunk_3.json  chapter_11_chunk_4.json  chapter_11_chunk_5.json  chapter_11_chunk_6.json  chapter_12_chunk_1.json  chapter_12_chunk_2.json  chapter_12_chunk_3.json  chapter_12_chunk_4.json  chapter_12_chunk_5.json  chapter_1_chunk_1.json  chapter_1_chunk_2.json  chapter_1_chunk_3.json  chapter_1_chunk_4.json  chapter_2_chunk_1.json  chapter_2_chunk_2.json  chapter_2_chunk_3.json  chapter_2_chunk_4.json  chapter_3_chunk_1.json  chapter_3_chunk_2.json  chapter_3_chunk_3.json  chapter_3_chunk_4.json  chapter_3_chunk_5.json  chapter_3_chunk_6.json  chapter_4_chunk_1.json  chapter_4_chunk_10.json  chapter_4_chunk_11.json  chapter_4_chunk_12.json  chapter_4_chunk_2.json  chapter_4_chunk_3.json  chapter_4_chunk_4.json  chapter_4_chunk_5.json  chapter_4_chunk_6.json  chapter_4_chunk_7.json  (+50 more)
archive/processed_chunks_24-25/: chapter_10_chunk_1.json  chapter_10_chunk_5.json  chapter_10_chunk_7.json  chapter_11_chunk_1.json  chapter_11_chunk_3.json  (+38 more)
notebooks/: 01_ingestion.ipynb  02_pdf_chunking.ipynb  03_llm_processing.ipynb  04_json_to_kg.py  05_kg_vector.ipynb  06_rag_answers.py
(+839 files in other folders)
