[project]
name = "tata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.45.0",
    "easyocr>=1.7.2",
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-neo4j>=0.5.0",
    "langchain-openai>=0.3.30",
    "langchain[all]>=0.3.27",
    "langextract>=1.0.8",
    "langgraph>=0.6.6",
    "neo4j>=5.28.2",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "pi-heif>=1.1.0",
    "pip>=25.2",
    "py2neo>=2021.2.4",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "ruff>=0.12.10",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.13",
    "unstructured-inference>=1.0.5",
]
